--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body, h1, h2, h3, p, ul, li, form {
   
   /* Styling for the Current Weather section */
   .current-weather {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     text-align: center;
   }
   
@@ -41,18 +41,43 @@ body, h1, h2, h3, p, ul, li, form {
   
   .temperature {
     font-size: 1rem;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-bottom: 0.5rem;
   }
   
   .description {
     font-size: 1rem;
-    font-style: italic;
+    /* font-style: italic; */
+    margin-bottom: 0.5rem;
   }
+
+  .feelstemperature {
+    font-size: 1rem;
+    /* font-weight: bold; */
+    margin-bottom: 0.5rem;
+  }  
+
+  .wind {
+    font-size: 1rem;
+    /* font-weight: bold; */
+    margin-bottom: 0.5rem;
+  }  
+
+  .humidity {
+    font-size: 1rem;
+    /* font-weight: bold; */
+    margin-bottom: 0.5rem;
+  } 
+
+  .uv {
+    font-size: 1rem;
+    /* font-weight: bold; */
+    /* margin-bottom: 0.5rem; */
+  } 
   
   /* Styling for the Forecast section */
   .forecast {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     text-align: center;
   }
   
